# dotenvdrift

./: .gitignore  AGENTS.md  CLAUDE.md  GEMINI.md  README.md  pyproject.toml
.github/: copilot-instructions.md
examples/broken-repo/: .env.example  docker-compose.yml
examples/broken-repo/.github/workflows/: release.yml
examples/broken-repo/app/: settings.py
examples/broken-repo/web/: client.ts
src/dotenvdrift/: __init__.py  cli.py  core.py
tests/: test_dotenvdrift.py
